HTML error regarding a target

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a
               class="profile__link"
               href="https://frontendmentor.io"
-              target="_frontendmentor"
+              target="frontendmentor"
               >Frontend Mentor</a
             >
           </li>
@@ -56,15 +56,12 @@
             <a
               class="profile__link"
               href="https://linkedin.com"
-              target="_linkedin"
+              target="linkedin"
               >LinkedIn</a
             >
           </li>
           <li>
-            <a
-              class="profile__link"
-              href="https://twitter.com"
-              target="_twitter"
+            <a class="profile__link" href="https://twitter.com" target="twitter"
               >Twitter</a
             >
           </li>
@@ -72,7 +69,7 @@
             <a
               class="profile__link"
               href="https://instagram.com"
-              target="_instagram"
+              target="instagram"
               >Instagram</a
             >
           </li>
