--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p class="profile__bio">"Front-end developer and avid reader."</p>
         <ul class="profile__list">
           <li>
-            <a class="profile__link" href="https://github.com" target="_github"
+            <a class="profile__link" href="https://github.com" target="github"
               >GitHub</a
             >
           </li>
